Updated FastApi and RecommendationService